# me133a

./: CMakeLists.txt  README.md  package.xml  twelvedof_new.urdf
config/: joint_names_basic12DOF.yaml  sixdof_control_parameters.yaml  twelvedof_control_parameters.yaml  twelvedof_control_parameters_l.yaml  twelvedof_new_control_parameters.yaml  twelvedof_sw_control_parameters.yaml
launch/: display.launch  displayold.launch  gazebo.launch  gazebo_plain.launch  gazebo_sevendof_dynamic_pdcontrolled.launch  gazebo_sevendof_dynamic_uncontrolled.launch  gazebo_sevendof_quasistatic.launch  gazebo_sixdof.launch  gazebo_twelvedof.launch  gazebodemo_trajectory.launch  gazebodemo_usegui.launch  hw6p2.launch  project.launch  project12.launch  project12_2.launch  project12new.launch  project12sw.launch  view.launch  view12.launch
meshes/: base_link.STL  link1.STL  link10.STL  link11.STL  link12.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL  link9.STL
meshes/basicmeshes/: link1.STL  link11.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL
rviz/: viewp4.rviz
scripts/: draw12_controller.py  draw_controller.py  gazebodemo_trajectory.py  gravity.py  kinematics.py  kinematics12.py  splines.py  trajectory12.py  trajectory12_2.py
src/: tipdraw.cpp
urdf/: basic12DOF_gazebo_dynamic.urdf  canvas.urdf  project.urdf  sevenDOF_gazebo_dynamic.urdf  sixdof.urdf  twelvedof.urdf  twelvedof_l.urdf  twelvedof_new.urdf  twelvedof_newunweighted.urdf  twelvedof_sw.urdf
worlds/: slowtime.world
